--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -5,7 +5,7 @@
   </configSections>
   <proxy>
     <http>
-      <listener name="test" host="localhost" port="50000"/>
+      <listener name="test" port="50000"/>
     </http>
   </proxy>
   <startup>
