--- a/Any.Proxy/Any.Proxy.csproj
+++ b/Any.Proxy/Any.Proxy.csproj
@@ -53,6 +53,27 @@
     <Compile Include="Http\HttpClient.cs" />
     <Compile Include="Http\HttpListener.cs" />
     <Compile Include="ListenerBase.cs" />
+    <Compile Include="Old\AuthBase.cs" />
+    <Compile Include="Old\AuthenticationList.cs" />
+    <Compile Include="Old\AuthNone.cs" />
+    <Compile Include="Old\AuthUserPass.cs" />
+    <Compile Include="Old\Client.cs" />
+    <Compile Include="Old\ConsoleAttributes.cs" />
+    <Compile Include="Old\FtpClient.cs" />
+    <Compile Include="Old\FtpDataConnection.cs" />
+    <Compile Include="Old\FtpListener.cs" />
+    <Compile Include="Old\HttpClient.cs" />
+    <Compile Include="Old\HttpListener.cs" />
+    <Compile Include="Old\Listener.cs" />
+    <Compile Include="Old\PortMapClient.cs" />
+    <Compile Include="Old\PortMapListener.cs" />
+    <Compile Include="Old\Proxy.cs" />
+    <Compile Include="Old\ProxyConfig.cs" />
+    <Compile Include="Old\Socks4Handler.cs" />
+    <Compile Include="Old\Socks5Handler.cs" />
+    <Compile Include="Old\SocksClient.cs" />
+    <Compile Include="Old\SocksHandler.cs" />
+    <Compile Include="Old\SocksListener.cs" />
     <Compile Include="PortMap\PortMapClient.cs" />
     <Compile Include="PortMap\PortMapListener.cs" />
     <Compile Include="Program.cs" />
