добавил еще один проект с прокси сервером

--- a/Any.HttpProxy/Any.HttpProxy.csproj
+++ b/Any.HttpProxy/Any.HttpProxy.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0625DA7C-0E7E-4435-A1EE-6F1477ECD113}</ProjectGuid>
+    <ProjectGuid>{43BCBC9C-B4E2-484B-8449-012CF1EA501B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Any.Proxy</RootNamespace>
-    <AssemblyName>Any.Proxy</AssemblyName>
+    <RootNamespace>Any.HttpProxy</RootNamespace>
+    <AssemblyName>Any.HttpProxy</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -22,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,16 +30,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Any.Logs">
-      <HintPath>..\Components\AnyLog\Any.Logs.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,46 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientBase.cs" />
-    <Compile Include="Configuration\HttpElement.cs" />
-    <Compile Include="Configuration\HttpElementCollection.cs" />
-    <Compile Include="Configuration\PortMapElement.cs" />
-    <Compile Include="Configuration\PortMapElementCollection.cs" />
-    <Compile Include="Configuration\ProxySection.cs" />
-    <Compile Include="Http\HttpClient.cs" />
-    <Compile Include="Http\HttpListener.cs" />
-    <Compile Include="ListenerBase.cs" />
-    <Compile Include="Old\AuthBase.cs" />
-    <Compile Include="Old\AuthenticationList.cs" />
-    <Compile Include="Old\AuthNone.cs" />
-    <Compile Include="Old\AuthUserPass.cs" />
-    <Compile Include="Old\Client.cs" />
-    <Compile Include="Old\ConsoleAttributes.cs" />
-    <Compile Include="Old\FtpClient.cs" />
-    <Compile Include="Old\FtpDataConnection.cs" />
-    <Compile Include="Old\FtpListener.cs" />
-    <Compile Include="Old\HttpClient.cs" />
-    <Compile Include="Old\HttpListener.cs" />
-    <Compile Include="Old\Listener.cs" />
-    <Compile Include="Old\PortMapClient.cs" />
-    <Compile Include="Old\PortMapListener.cs" />
-    <Compile Include="Old\Proxy.cs" />
-    <Compile Include="Old\ProxyConfig.cs" />
-    <Compile Include="Old\Socks4Handler.cs" />
-    <Compile Include="Old\Socks5Handler.cs" />
-    <Compile Include="Old\SocksClient.cs" />
-    <Compile Include="Old\SocksHandler.cs" />
-    <Compile Include="Old\SocksListener.cs" />
-    <Compile Include="PortMap\PortMapClient.cs" />
-    <Compile Include="PortMap\PortMapListener.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proxy.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
