--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -15,9 +15,9 @@
     </file>
   </anylog>
   <proxy>
-    <http>
-      <listener name="test" port="50000"/>
-    </http>
+    <portMap>
+      <listener name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093"/>
+    </portMap>
   </proxy>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
