--- a/Any.Proxy/Any.Proxy.csproj
+++ b/Any.Proxy/Any.Proxy.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Https\ListenerBase.cs" />
     <Compile Include="Http\HttpModule.cs" />
     <Compile Include="IProxyModule.cs" />
+    <Compile Include="HttpParser.cs" />
     <Compile Include="PortMap\Configuration\PortMapElement.cs" />
     <Compile Include="PortMap\Configuration\PortMapElementCollection.cs" />
     <Compile Include="PortMap\Configuration\ProxySection.cs" />
