--- a/Any.Proxy/Any.Proxy.csproj
+++ b/Any.Proxy/Any.Proxy.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,9 +54,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HttpBridge.cs" />
     <Compile Include="Https\HttpsClient.cs" />
     <Compile Include="Https\HttpsModule.cs" />
     <Compile Include="Http\HttpModule.cs" />
+    <Compile Include="Http\HttpClientModule.cs" />
     <Compile Include="IProxyModule.cs" />
     <Compile Include="HttpParser.cs" />
     <Compile Include="PortMap\Configuration\PortMapElement.cs" />
