--- a/Any.Proxy.Service/Any.Proxy.Service.csproj
+++ b/Any.Proxy.Service/Any.Proxy.Service.csproj
@@ -210,7 +210,12 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Any.Proxy.Com\Any.Proxy.Com.csproj">
+      <Project>{824ac8f5-abe7-4324-8466-2e57eddc03f2}</Project>
+      <Name>Any.Proxy.Com</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
