--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -1,25 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
   <configSections>
     <sectionGroup name="anylog">
-      <section name="file" type="Any.Logs.Loggers.Files.Configuration.FileLoggerSection, Any.Logs, Version=1.0.0.0, Culture=neutral"/>
+      <section name="file"
+               type="Any.Logs.Loggers.Files.Configuration.FileLoggerSection, Any.Logs, Version=1.0.0.0, Culture=neutral" />
     </sectionGroup>
-    <section name="proxy" type="Any.Proxy.Configuration.ProxySection, Any.Proxy, Version=1.0.0.0, Culture=neutral"/>
+    <section name="proxy" type="Any.Proxy.Configuration.ProxySection, Any.Proxy, Version=1.0.0.0, Culture=neutral" />
   </configSections>
   <anylog>
     <file>
       <loggers>
-        <logger methods="Error" path="[cdir]\Errors\"/>
-        <logger methods="Info" path="[cdir]\Messages\"/>
+        <logger methods="Error" path="[cdir]\Errors\" />
+        <logger methods="Info" path="[cdir]\Messages\" />
       </loggers>
     </file>
   </anylog>
   <proxy>
     <portMap>
-      <listener name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093"/>
+      <listener name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093" />
     </portMap>
   </proxy>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
 </configuration>
