--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -3,8 +3,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="anylog">
-      <section name="file"
-               type="Any.Logs.Loggers.Files.Configuration.FileLoggerSection, Any.Logs, Version=1.0.0.0, Culture=neutral" />
+      <section name="file" type="Any.Logs.Loggers.Files.Configuration.FileLoggerSection, Any.Logs, Version=1.0.0.0, Culture=neutral" />
     </sectionGroup>
     <section name="proxy" type="Any.Proxy.Configuration.ProxySection, Any.Proxy, Version=1.0.0.0, Culture=neutral" />
   </configSections>
@@ -12,14 +11,23 @@
     <file>
       <loggers>
         <logger methods="Error" path="[cdir]\Errors\" />
-        <logger methods="Info" path="[cdir]\Messages\" />
+        <logger methods="Info" path="[cdir]\Info\" />
       </loggers>
     </file>
   </anylog>
   <proxy>
-    <portMap>
-      <listener name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093" />
-    </portMap>
+    <!--<portMap>
+      <module name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093" />
+    </portMap>-->
+    <!--<http>
+      <module name="test" host="localhost" port="50000" sslPort="51111" />
+    </http>-->
+    <httpAgent>
+      <module name="test" port="50000" sslPort="51111" url="http://localhost:52222" />
+    </httpAgent>
+    <httpService>
+      <module name="test" prefixes="http://localhost:52222/" />
+    </httpService>
   </proxy>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
