--- a/Any.Proxy.Remote/Any.Proxy.Remote.csproj
+++ b/Any.Proxy.Remote/Any.Proxy.Remote.csproj
@@ -32,7 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Any.Logs">
+      <HintPath>..\Components\AnyLog\Any.Logs.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteSection.cs" />
     <Compile Include="RemoteControl.cs" />
   </ItemGroup>
   <ItemGroup>
