--- a/Any.Proxy.Remote/App.config
+++ b/Any.Proxy.Remote/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <sectionGroup name="anylog">
+      <section name="file" type="Any.Logs.Loggers.Files.Configuration.FileLoggerSection, Any.Logs, Version=1.0.0.0, Culture=neutral" />
+    </sectionGroup>
+    <section name="remote" type="Any.Proxy.Remote.RemoteSection, Any.Proxy.Remote, Version=1.0.0.0, Culture=neutral" />
+  </configSections>
+  <anylog>
+    <file>
+      <loggers>
+        <logger methods="Error" path="[cdir]\Errors\" />
+        <logger methods="Info" path="[cdir]\Info\" />
+      </loggers>
+    </file>
+  </anylog>
+  <remote password="1" prefixes="http://lifehttp.com/" process="C:\Proxy\Any.Proxy.exe"/>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
