--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -19,12 +19,12 @@
     <!--<portMap>
       <module name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093" />
     </portMap>-->
-    <!--<http>
-      <module name="test" host="localhost" port="50000" sslPort="51111" />
-    </http>-->
-    <httpAgent>
+    <http>
+      <module name="test" port="50000" sslPort="51111" />
+    </http>
+    <!--<httpAgent>
       <module name="test" port="50000" sslPort="51111" url="http://lifemd5.com/" />
-    </httpAgent>
+    </httpAgent>-->
     <!--<httpService>
       <module name="test" prefixes="http://lifemd5.com/" />
     </httpService>-->
