--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -20,7 +20,7 @@
       <module name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093" />
     </portMap>-->
     <http>
-      <module name="test" port="50000" sslPort="51111" />
+      <module name="test" port="50000" />
     </http>
     <!--<httpAgent>
       <module name="test" port="50000" sslPort="51111" url="http://lifemd5.com/" />
