--- a/Any.Proxy/Any.Proxy.csproj
+++ b/Any.Proxy/Any.Proxy.csproj
@@ -57,8 +57,6 @@
     <Compile Include="HttpAgent\Configuration\HttpAgentElement.cs" />
     <Compile Include="HttpAgent\Configuration\HttpAgentElementCollection.cs" />
     <Compile Include="HttpBridge.cs" />
-    <Compile Include="HttpAgent\HttpAgentModule.cs" />
-    <Compile Include="HttpAgent\HttpsAgentConnection.cs" />
     <Compile Include="HttpService\Configuration\HttpServiceElement.cs" />
     <Compile Include="HttpService\Configuration\HttpServiceElementCollection.cs" />
     <Compile Include="Http\Configuration\HttpElement.cs" />
@@ -66,7 +64,7 @@
     <Compile Include="Http\HttpConnection.cs" />
     <Compile Include="HttpAgent\HttpsAgentUnit.cs" />
     <Compile Include="Http\HttpModule.cs" />
-    <Compile Include="HttpAgent\HttpAgentUnit.cs" />
+    <Compile Include="IBridge.cs" />
     <Compile Include="IProxyModule.cs" />
     <Compile Include="HttpParser.cs" />
     <Compile Include="PortMap\Configuration\PortMapElement.cs" />
