--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -19,15 +19,15 @@
     <!--<portMap>
       <module name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093" />
     </portMap>-->
-    <http>
+    <!--<http>
       <module name="test" port="50000" />
-    </http>
-    <!--<httpAgent>
-      <module name="test" port="50000" sslPort="51111" url="http://lifemd5.com/" />
-    </httpAgent>-->
-    <!--<httpService>
-      <module name="test" prefixes="http://lifemd5.com/" />
-    </httpService>-->
+    </http>-->
+    <httpAgent>
+      <module name="test" port="50000" url="http://localhost:52222/" />
+    </httpAgent>
+    <httpService>
+      <module name="test" prefixes="http://localhost:52222/" />
+    </httpService>
   </proxy>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
