--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -23,11 +23,11 @@
       <module name="test" port="50000" />
     </http>-->
     <httpAgent>
-      <module name="test" port="50000" url="http://localhost:52222/" />
+      <module name="test" port="50000" url="http://lifemd5.com/" />
     </httpAgent>
-    <httpService>
-      <module name="test" prefixes="http://localhost:52222/" />
-    </httpService>
+    <!--<httpService>
+      <module name="test" prefixes="http://lifemd5.com/" />
+    </httpService>-->
   </proxy>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
