--- a/Any.Proxy/Any.Proxy.csproj
+++ b/Any.Proxy/Any.Proxy.csproj
@@ -56,14 +56,16 @@
   <ItemGroup>
     <Compile Include="HttpAgent\Configuration\HttpAgentElement.cs" />
     <Compile Include="HttpAgent\Configuration\HttpAgentElementCollection.cs" />
+    <Compile Include="Configuration\HttpBridgeElement.cs" />
     <Compile Include="HttpBridge.cs" />
     <Compile Include="HttpService\Configuration\HttpServiceElement.cs" />
     <Compile Include="HttpService\Configuration\HttpServiceElementCollection.cs" />
     <Compile Include="Http\Configuration\HttpElement.cs" />
     <Compile Include="Http\Configuration\HttpElementCollection.cs" />
     <Compile Include="Http\HttpConnection.cs" />
-    <Compile Include="HttpAgent\HttpsAgentUnit.cs" />
+    <Compile Include="HttpAgent\HttpAgentModule.cs" />
     <Compile Include="Http\HttpModule.cs" />
+    <Compile Include="Http\HttpModuleBase.cs" />
     <Compile Include="IBridge.cs" />
     <Compile Include="IProxyModule.cs" />
     <Compile Include="PortMap\Configuration\PortMapElement.cs" />
