--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -19,15 +19,22 @@
     <!--<portMap>
       <module name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093" />
     </portMap>-->
-    <!--<http>
+    <http>
       <module name="test" port="50000" />
-    </http>-->
-    <httpAgent>
-      <module name="test" port="50000" url="http://lifemd5.com/" />
-    </httpAgent>
-    <!--<httpService>
+    </http>
+    <!--<httpAgent>
+      <module name="test" port="50000" >
+        <httpBridge url="http://lifemd5.com/"
+                    useProxy="false"
+                    proxy="inet-proxy-b.sputnik.loadb.ubs.net:8085"
+                    useDefaultCredentials="true"
+                    userName=""
+                    password=""/>
+      </module>
+    </httpAgent>-->
+    <httpService>
       <module name="test" prefixes="http://lifemd5.com/" />
-    </httpService>-->
+    </httpService>
   </proxy>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
