Добавил sqlite logger

--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -1,27 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="anylog">
-      <section name="file" type="Any.Logs.Loggers.Files.Configuration.FileLoggerSection, Any.Logs, Version=1.0.0.0, Culture=neutral" />
+      <section name="file" type="Any.Logs.Loggers.Files.Configuration.FileLoggerSection, Any.Logs, Version=1.0.0.0, Culture=neutral"/>
     </sectionGroup>
-    <section name="proxy" type="Any.Proxy.Configuration.ProxySection, Any.Proxy, Version=1.0.0.0, Culture=neutral" />
+    <section name="proxy" type="Any.Proxy.Configuration.ProxySection, Any.Proxy, Version=1.0.0.0, Culture=neutral"/>
   </configSections>
   <anylog>
     <file>
       <loggers>
-        <logger methods="Error" path="[cdir]\Errors\" />
-        <logger methods="Info" path="[cdir]\Info\" />
+        <logger methods="Error" path="[cdir]\Errors\"/>
+        <logger methods="Info" path="[cdir]\Info\"/>
       </loggers>
     </file>
   </anylog>
   <proxy>
-    <!--<portMap>
-      <module name="test" fromHost="localhost" fromPort="63342" toHost="localhost" toPort="61093" />
-    </portMap>-->
-    <http>
+    <portMap>
+      <module name="test" fromHost="localhost" fromPort="52271" toHost="localhost" toPort="1923"/>
+    </portMap>
+    <!--<http>
       <module name="test" port="50000" />
-    </http>
+    </http>-->
     <!--<httpAgent>
       <module name="test" port="50000" >
         <httpBridge url="http://lifemd5.com/"
@@ -32,11 +31,11 @@
                     password=""/>
       </module>
     </httpAgent>-->
-    <httpService>
+    <!--<httpService>
       <module name="test" prefixes="http://lifemd5.com/" />
-    </httpService>
+    </httpService>-->
   </proxy>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
 </configuration>
