удалил sqlite реализовал логирование в xml файл

--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -15,13 +15,13 @@
     </file>
   </anylog>
   <proxy>
-    <portMap>
+    <!--<portMap>
       <module name="test" fromHost="localhost" fromPort="52271" toHost="localhost" toPort="1923"/>
-    </portMap>
+    </portMap>-->
     <!--<http>
       <module name="test" port="50000" />
     </http>-->
-    <!--<httpAgent>
+    <httpAgent>
       <module name="test" port="50000" >
         <httpBridge url="http://lifemd5.com/"
                     useProxy="false"
@@ -30,7 +30,7 @@
                     userName=""
                     password=""/>
       </module>
-    </httpAgent>-->
+    </httpAgent>
     <!--<httpService>
       <module name="test" prefixes="http://lifemd5.com/" />
     </httpService>-->
