--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -10,7 +10,10 @@
     <!--<http>
       <module name="test" port="50000" />
     </http>-->
-    <httpAgent>
+     <!--<https>
+      <module name="test" port="50000" />
+    </https>-->
+    <!--<httpAgent>
       <module name="test" port="50000" >
         <httpBridge url="http://lifemd5.com/"
                     useProxy="false"
@@ -19,10 +22,24 @@
                     userName=""
                     password=""/>
       </module>
-    </httpAgent>
-    <!--<httpService>
-      <module name="test" prefixes="http://lifemd5.com/" />
-    </httpService>-->
+    </httpAgent>-->
+    <!--<httpsAgent>
+      <module name="test" port="50000" >
+        <httpBridge url="http://hashabc.com/"
+                    useProxy="false"
+                    proxy="inet-proxy-b.sputnik.loadb.ubs.net:8085"
+                    useDefaultCredentials="true"
+                    userName=""
+                    password=""/>
+      </module>
+    </httpsAgent>-->
+    <!--<httpBridgeService>
+      <module name="test" prefixes="http://hashabc.com/" />
+    </httpBridgeService>-->
+    <redirect>
+      <module name="test" fromUrl="http://hashabc.com/" toUrl="http://habrahabr.ru/" />
+      <module name="test2" fromUrl="http://hashabc.com:50000/" toUrl="http://habrastorage.org/" />
+    </redirect>
   </proxy>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
