--- a/Any.Proxy/app.config
+++ b/Any.Proxy/app.config
@@ -10,7 +10,7 @@
     <!--<http>
       <module name="test" port="50000" />
     </http>-->
-     <!--<https>
+    <!--<https>
       <module name="test" port="50000" />
     </https>-->
     <!--<httpAgent>
@@ -37,9 +37,23 @@
       <module name="test" prefixes="http://hashabc.com/" />
     </httpBridgeService>-->
     <redirect>
-      <module name="test" fromUrl="http://hashabc.com/" toUrl="http://habrahabr.ru/" />
+      <module name="test" fromUrl="http://hashabc.com/" toUrl="http://habrahabr.ru/">
+        <replaces>
+          <replace mediaType="text/html" oldValue="habrastorage.org" newValue="hashabc.com:50000"/>
+          <replace mediaType="text/html" oldValue="http://habrahabr.ru" newValue="http://hashabc.com"/>
+        </replaces>
+      </module>
       <module name="test2" fromUrl="http://hashabc.com:50000/" toUrl="http://habrastorage.org/" />
     </redirect>
+    <!--<redirect>
+      <module name="test" fromUrl="http://localhost:50001/" toUrl="http://habrahabr.ru/">
+        <replaces>
+          <replace mediaType="text/html" oldValue="habrastorage.org" newValue="localhost:50000"/>
+          <replace mediaType="text/html" oldValue="http://habrahabr.ru" newValue="http://localhost:50001"/>
+        </replaces>
+      </module>
+      <module name="test2" fromUrl="http://localhost:50000/" toUrl="http://habrastorage.org/" />
+    </redirect>-->
   </proxy>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
